<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="main_label">Diary</string>
    <string name="food_entry_menu_delete">Delete</string>
    <string name="food_entry_menu_edit">Edit</string>
    <string name="add_food_input_search_hint">Find food</string>
    <string name="add_food_dialog_serving_name">Serving name</string>
    <string name="add_food_dialog_serving_name_hint">Serving name</string>
    <string name="add_food_dialog_grams">grams</string>
    <string name="add_food_dialog_default_serving_size">100</string>
    <string name="add_food_dialog_default_amount">1</string>
    <string name="main_footer_total">Total</string>
    <string name="new_food_foodname">Food name</string>
    <string name="new_food_cal">kcal</string>
    <string name="new_food_protein">protein</string>
    <string name="new_food_carbs">carbs</string>
    <string name="new_food_fat">fat</string>
    <string name="new_food_add_food">Add food to database</string>
    <string name="main_add_food">Add</string>
    <string name="add_food_label">Add food</string>
    <string name="new_food_label">Add food to database</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_refresh">Refresh</string>
    <string name="settings_label">Settings</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="main_footer_remaining">Remaining</string>
    <string name="main_footer_goal">Goal</string>
    <string name="main_menu_change_goals">Goals</string>
    <string name="goals_height_hint">Height</string>
    <string name="goals_weight_hint">Weight</string>
    <string name="goals_exercise_level_text">Exercise level</string>
    <string name="goals_goal_text">Goal</string>
    <string name="goals_checkbox_text">Custom macros</string>
    <string name="goals_gram_per_day">g/day</string>
    <string name="goals_cal">Calories:</string>
    <string name="goals_protein">Protein:</string>
    <string name="goals_carbs">Carbohydrates:</string>
    <string name="goals_fat">Fat:</string>
    <string name="goals_button_continue">Continue</string>
    <string name="goals_label">Goals</string>
    <string name="goals_age_hint">Age</string>
    <string name="goals_sex">Sex</string>
    <string name="goals_sex_text_male">Male</string>
    <string name="goals_sex_text_female">Female</string>
    <string name="goals_centimeter">cm</string>
    <string name="goals_kg">kg</string>
    <string name="add_food_menu_new">New</string>
    <string name="new_meal_dialog_title">New meal</string>
    <string name="new_meal_dialog_message">Enter meal name</string>
    <string name="app_name">My Fitness Buddy</string>
    <string name="goald_cal_per_day">kcal</string>
    <string name="how_much_dialog_title">How much?</string>
    <string name="how_much_dialog_new_serving">New Serving</string>
    <string name="pref_clear_database_summary">Delete all local data</string>
    <string name="pref_clear_database">Clear database</string>
    <string name="pref_server_address_dialogTitle">Enter food server address(for example: 192.168.1.100:8000)</string>
    <string name="pref_server_address_summary">Food database server url</string>
    <string name="pref_server_address_title">Server address</string>
    <string name="pref_online_summary">Load food nutritional information from remote server</string>
    <string name="pref_online_title">Online database</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
</resources>
